Se agregan los códigos para que el proyecto se pueda desplegar en heroku y firebase